--- a/ece5010/MergeDetailPage.xaml
+++ b/ece5010/MergeDetailPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ece5010.MergeDetailPage"
-             Title="ece5010.MergeDetailPage">
+             Title="Merge Multiple Files">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
