--- a/ece5010/InsertDetailPage.xaml
+++ b/ece5010/InsertDetailPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ece5010.InsertDetailPage"
-             Title="Insert one PDF into another">
+             Title="Insert one PDF into another"
+             x:Name="ThisPage"
+             BindingContext="{x:Reference Name=ThisPage}">
     <VerticalStackLayout>
         <HorizontalStackLayout>
             <Entry x:Name="InsertPageNumber"
@@ -13,13 +15,31 @@
 
         <Button Text="Select PDF File"
                 Clicked="OpenFilesButtonClicked1"
-               Margin="50,50,50,10"/>
+               Margin="50,10,50,0"/>
         <Button Text="Select File to be Inserted"
                 Clicked="OpenFilesButtonClicked2"
-               Margin="50,50,50,10"/>
+               Margin="50,10,50,0"/>
 
         <Button Text="Insert PDF"
          Clicked="InsertFilesButtonClicked"
-                Margin="50,20,50,50"/>
+                Margin="50,10,50,10"/>
+        <Grid Margin="0,10" RowSpacing="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <WebView Grid.Column="0"
+                     Source="{Binding PdfWebViewSource1}"
+                     HeightRequest="400"
+                     WidthRequest="380"
+                     Margin="0,0,0,10"/>
+            <WebView Grid.Column="1"
+                     Source="{Binding PdfWebViewSource2}"
+                     HeightRequest="400"
+                     WidthRequest="380"
+                     Margin="0,0,0,10">
+                
+            </WebView>
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
